--- a/gb/21/11/3/n13349650.md
+++ b/gb/21/11/3/n13349650.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/samgdi393/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/samgdi393/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/samgdi393/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/samgdi393/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/samgdi393/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/samgdi393/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/samgdi393/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>“福尔摩沙国际电影节”回归  影展聚焦环境共荣</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/11/id13349652-525419-600x400.jpg" />
 <h6> “福尔摩沙国际电影节”回归，首场活动由导演李佳怀的专题展热身、打头阵。 （洪马克导演提供）
 </h6>
 <hr>
-<p>【大纪元2021年11月03日讯】（大纪元记者黄玉燕台湾台中报导）疫情下全球许多艺文活动陆续收摊，从台中出发、全台知名的福尔摩沙国际电影节（FFIFA）也被迫停摆3年；创办人导演<ahref="https://github.com/samgdi393/djy/blob/master/gb/tag/%E6%B4%AA%E9%A9%AC%E5%85%8B.md#1">洪马克</a>日前决定恢复举办，征件以友善环境为主题，首场由导演李佳怀的专题展打头阵。回归后的洪马克带着疫情期间的反思与接拍的崭新体验，对FFIFA的重启有新方向，他说，“过去的目标是想把FFIFA做到全台湾、办到全世界，如今他不追求豪华的影展，希望从旧城中区出发，在台中落地生根。”</p>
-<p>导演<ahref="https://github.com/samgdi393/djy/blob/master/gb/tag/%E6%B4%AA%E9%A9%AC%E5%85%8B.md#1">洪马克</a>过去是世界各地独立影展的常客，因为发现国际上很多人不知道台湾，他便请朋友设计了“我来自台湾”的小红旗，只要有机会站上国际舞台，就随手拿出来宣传。尔后他也带着其他台湾作品一起到世界各地放映，只要有机会上台领奖，就会号召台下的导演来看台湾电影；渐渐地，各国影展开始主动跟他联络，希望邀请台湾短片参与竞赛。</p>
+<p>【大纪元2021年11月03日讯】（大纪元记者黄玉燕台湾台中报导）疫情下全球许多艺文活动陆续收摊，从台中出发、全台知名的福尔摩沙国际电影节（FFIFA）也被迫停摆3年；创办人导演<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B4%AA%E9%A9%AC%E5%85%8B.md#1">洪马克</a>日前决定恢复举办，征件以友善环境为主题，首场由导演李佳怀的专题展打头阵。回归后的洪马克带着疫情期间的反思与接拍的崭新体验，对FFIFA的重启有新方向，他说，“过去的目标是想把FFIFA做到全台湾、办到全世界，如今他不追求豪华的影展，希望从旧城中区出发，在台中落地生根。”</p>
+<p>导演<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B4%AA%E9%A9%AC%E5%85%8B.md#1">洪马克</a>过去是世界各地独立影展的常客，因为发现国际上很多人不知道台湾，他便请朋友设计了“我来自台湾”的小红旗，只要有机会站上国际舞台，就随手拿出来宣传。尔后他也带着其他台湾作品一起到世界各地放映，只要有机会上台领奖，就会号召台下的导演来看台湾电影；渐渐地，各国影展开始主动跟他联络，希望邀请台湾短片参与竞赛。</p>
 <figure id="13349653" aria-describedby="caption-13349653" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2021/11/id13349653-525420-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2021/11/id13349653-525420-450x300.jpg" alt="洪马克导演经常带着“我来自台湾”小红旗，跑遍全球各影展。" width="500" /></a><figcaption id="caption-13349653" class="wp-caption-text">洪马克导演经常带着“我来自台湾”小红旗，跑遍全球各影展。（洪马克导演提供）</figcaption></figure>
 <p>在几年的碰撞与因缘巧合下，洪马克在2016年创办了第一届福尔摩沙国际电影节，“因为第一届FFIFA一炮而红，规模做得很大，后来觉得不能退步，就愈做愈大、也愈来愈累，最后我开始困惑了!”</p>
 <p>“这是我要的吗？”洪马克说，困惑没多久影展就停摆了，这一停摆就是3年!他看到全世界的姐妹影展一个接着一个收摊!在FFIFA停摆的3年里，他也回归本业接案拍片，刚好接到的案子都是跟自然农法有关的纪录片，生命也因此产生大的转变。</p>
@@ -26,47 +26,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/15/4/30/n4423546.md#1">加拿大影展失误 台导演洪马克意外成焦点</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/15/7/6/n4473654.md#1">看见台湾  洪马克百大影展挺进温哥华</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/15/9/8/n4522252.md#1">台湾导演洪马克 在改变大环境中实现电影梦</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/16/6/8/n7975980.md#1">好莱坞夺8金 洪马克催生全球唯一中文影展平台</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/16/6/8/n7978910.md#1">洪马克“好莱坞国际电影奖”创佳绩</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/16/11/24/n8524297.md#1">让世界看见   洪马克百大影展移师台湾</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/21/11/2/n13347470.md#1">智慧机械航太升级成果展 20家隐形冠军秀实力</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/21/11/2/n13347399.md#1">地方吉祥物满天飞 挨轰敷衍、缺乏共鸣</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/21/11/2/n13347410.md#1">台中社宅超标5千户 明年估达7千户</a></li>
-<li><a href="https://github.com/samgdi393/djy/blob/master/gb/21/11/1/n13344780.md#1">一房难求！ 武陵农场樱花季1日开放秒杀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/4/30/n4423546.md#1">加拿大影展失误 台导演洪马克意外成焦点</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/6/n4473654.md#1">看见台湾  洪马克百大影展挺进温哥华</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/9/8/n4522252.md#1">台湾导演洪马克 在改变大环境中实现电影梦</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/6/8/n7975980.md#1">好莱坞夺8金 洪马克催生全球唯一中文影展平台</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/6/8/n7978910.md#1">洪马克“好莱坞国际电影奖”创佳绩</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/24/n8524297.md#1">让世界看见   洪马克百大影展移师台湾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690735.md#1">中荣乳癌阳光斗士  献爱植物人失依老人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690659.md#1">FFIFA首届纪录片工作坊 提升贴近市场创作力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690119.md#1">中医大展家扶绘画 儿童节“艺”义非凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688764.md#1">许博允创作60周年  吴兴国“寒食”舞出人性</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/16/n10979189.md#1" target="_blank">共产暴政录：许世友文革中的暴行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/26/n13330410.md#1">古人怎样染发？中医有一染三年不变的方子？</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/28/n13336995.md#1">【百年真相】从天堂到地狱 金敬迈荒唐的红与黑</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/3/n13278837.md#1">五代乱世一清流 太监改一字救千人</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/28/n13336917.md#1">【未解之谜】金字塔身世之谜</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/2/n13348797.md#1">【财商天下】股市响“警钟” 中签即中枪</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/2/n13348752.md#1">【重播】美前国防高官：中共邪恶政权如同纳粹</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/1/n13346333.md#1">【探索时分】东风17吹出两神话 速度却只5马赫？</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/1/n13345975.md#1">中共证实欧盟等32国取消中国贸易优惠待遇</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13343085.md#1">【中国观察】打击企业酿巨大失业浪潮</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/1/n13346224.md#1">【远见快评】布林肯中计？王毅策划“晏子使楚”</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13342061.md#1">詹雅雯聊病后对生命体悟 被唐绮阳一句话逼哭</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13343543.md#1">58岁叶童身形消瘦 吃路边摊模样吓坏粉丝</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13343761.md#1">传大陆知名网红“草原公主”遭男友杀害</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/1/n13345128.md#1">宫胁咲良与日本公司Vernalossom合约告终</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13342570.md#1">《玻璃心》14天破2千万观看 陈芳语喜喊自由无价</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/30/n13341155.md#1">记忆力下降和它有关？淀粉吃多的5大坏处</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13342182.md#1">返家发现公寓内空无一物 美国女子震惊不已</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/31/n13342382.md#1">英妇打扫房屋找到34克拉钻石 差点扔垃圾桶</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/10/23/n13324629.md#1">1分钟等于45分钟轻度运动？4个动作速燃脂</a></li>
-<li><a href="https://github.com/bpiugw352/djy/blob/master/gb/21/11/1/n13344557.md#1">油门误当刹车 瑞士男子把超级跑车开进湖里</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/samgdi393/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/samgdi393/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/3/n13349650.htm">“福尔摩沙国际电影节”回归  影展聚焦环境共荣</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/11/3/n13349650.htm">“福尔摩沙国际电影节”回归  影展聚焦环境共荣</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/samgdi393/djy/blob/master/gb/21/11/3/n13349650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/samgdi393/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/samgdi393/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/samgdi393/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/samgdi393/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/samgdi393/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/11/3/n13349650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
